--- a/css/style.css
+++ b/css/style.css
@@ -97,6 +97,7 @@ body.dark{
 }
 
 .container .header .logo{
+    padding-left: 50%;
     display: flex;
     align-items: center;
     cursor: pointer;
@@ -455,15 +456,15 @@ body.dark .home .text{
 /* RING-SECTION */
 
 .col-2 .ring img{
-    width: 100%;
+    width: 96%;
     padding-top: 98px;
-    padding-left: 40px;
+    padding-left: 12%;
     padding-right: 40px;
     max-width: 580px;
 }
 
 #circle-ring{
-    padding-left: 6%;
+    padding-left: 15%;
     padding-top: -2%;
 
 
@@ -527,8 +528,8 @@ body.dark .home .text{
 .col-2 .ring-two{
     position: absolute;
     margin-top: 68px;
-    margin-left: -5px;
-    top: 13%;
+    margin-left: -8%;
+    top: 10%;
     left: 56%;
     width: 460px;
     height: 460px;
